json 글자 꺠짐 현상 utf8 인코딩으로 해결